--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,136 +1,231 @@
 * {
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body {
-    font-family: monospace;
+.container {
+  margin: 0 auto;
+  width: 80%;
+  display: grid;
+  height: 100vh;
+  grid-gap: 5px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, auto);
 }
-
-.contenedor {
-    width: 960px;
-    margin: 0 auto;
+@media only screen and (max-width: 550px) {
+  .container {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
 }
 
 .menu {
-    width: 960px;
-    padding: 10px;
-    border-bottom: 1px solid gray
+  margin: 0 auto;
+  grid-column: 1/5;
+  grid-row: 1/2;
 }
 
-.logo {
-    font-size: 24px;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: inline-block;
+.section-noticias {
+  margin: 0 auto;
+  grid-column: 1/4;
+  grid-row: 2/3;
+}
+@media only screen and (max-width: 550px) {
+  .section-noticias {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
 }
 
-.nav {
-    display: inline-block;
-    width: 840px;
-    text-align: right;
+.aside {
+  margin: 0 auto;
+  grid-column: 4/5;
+  grid-row: 2/3;
+}
+@media only screen and (max-width: 550px) {
+  .aside {
+    display: none;
+  }
 }
 
-
-
-.nav ul li a {
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
-.input-menu {
-    border-radius: 30px;
-}
-
-.contenido {
-    width: 960px;
-    margin: 0 auto;
-}
-
-.listad-noticias {
-    width: 700px;
-    float: left;
-}
-
-.noticia {
-    width: 210px;
-    display: inline-block;
-    margin: 5px;
-    cursor: pointer;
-}
-
-.cuerpo img {
-    width: 210px;
-    height: 300px;
-}
-
-.cuerpo p {
-    padding: 5px 10px;
-}
-
-.listado-izquierdo {
-    width: 220px;
-    float: right;
-}
-
-.cabecera-listado {
-    width: 220px;
-    border-bottom: 1px solid gray;
-}
-
-.tags {
-    border-bottom: 1px solid gray;
-}
-
-.tags ul {
-    padding: 0;
-    list-style: none;
-}
-
-.tags ul li {
-    padding: 2px 4px;
-    background-color: steelblue;
-    margin-right: 1px;
-    color: white;
-}
-
-.noticias-destacadas {
-    margin-bottom: 50px;
-}
-
-.noticias-destacadas img {
-    width: 220px;
-    height: 200px;
-}
-
-
-.newsletter {
-    width: 960px;
-    background-color: #f2f4f5;
-    text-align: center;
-    padding-top: 30px;
-    padding-bottom: 30px;
-}
-
-.newsletter h2 {
-    font-size: 24px
-}
-
-.group input,
-.group button {
-    display: inline-block;
-    border-width: 0;
-    font-size: 13px;
-    padding: 5px 10px;
-
-}
-
-.group button {
-    background-color: coral;
-    color: white;
+.section-newsletter {
+  margin: 0 auto;
+  grid-column: 1/5;
+  grid-row: 3/4;
 }
 
 .footer {
-    width: 960px;
-    margin: 0 auto;
-    text-align: center;
+  margin: 0 auto;
+  grid-column: 1/5;
+  grid-row: 4/5;
 }
+
+.menu {
+  width: 100%;
+  padding: 1.125rem;
+  margin-right: 0;
+  display: flex;
+  align-items: center;
+  align-content: space-between;
+  border-bottom: 0.0625rem solid gray;
+}
+
+.menu__logo {
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.menu__links {
+  float: right;
+  width: 52.5rem;
+  text-align: right;
+  list-style-type: none;
+}
+
+.menu__links-1, .menu__links-2 {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+}
+
+.menu__input {
+  border-radius: 1.875rem;
+}
+
+@media only screen and (max-width: 550px) {
+  .menu__links-1 {
+    display: none;
+    text-decoration: none;
+  }
+}
+.section-noticias {
+  margin: 0 auto;
+  width: 100%;
+  padding: 0.9375rem;
+  display: flex;
+  justify-content: center;
+}
+
+.listad-noticias__noticias {
+  width: 13.125rem;
+  display: inline-block;
+  margin: 0.3125rem;
+  cursor: pointer;
+}
+@media only screen and (max-width: 550px) {
+  .listad-noticias__noticias {
+    width: 100%;
+  }
+}
+.listad-noticias__cuerpo img {
+  width: 100%;
+  height: 21.875rem;
+  margin-top: 1.5625rem;
+  margin-bottom: 0.9375rem;
+}
+@media only screen and (max-width: 550px) {
+  .listad-noticias__cuerpo img {
+    height: 12.5rem;
+  }
+}
+.listad-noticias__cuerpo p {
+  margin-bottom: 1.5625rem;
+}
+
+.aside {
+  float: right;
+  padding: 0.625rem;
+}
+
+.listado {
+  border-bottom: 0.0625rem solid gray;
+}
+
+.listado__tittle {
+  margin-bottom: 0.9375rem;
+}
+
+.listado__parrafo {
+  margin-bottom: 0.9375rem;
+}
+
+.main-tags {
+  margin-bottom: 0.9375rem;
+}
+.main-tags__tittle {
+  margin-bottom: 0.9375rem;
+}
+.main-tags__links li {
+  color: white;
+  padding: 0.1875rem;
+  display: inline;
+  background-color: steelblue;
+  list-style-type: none;
+  margin-bottom: 1.25rem;
+}
+
+.tags__box {
+  border-bottom: 0.0625rem solid gray;
+}
+
+.noticias-destacadas {
+  padding-top: 0.9375rem;
+}
+.noticias-destacadas__tittle {
+  margin-bottom: 0.9375rem;
+}
+.noticias-destacadas__description {
+  margin-bottom: 0.75rem;
+}
+.noticias-destacadas__img {
+  margin-bottom: 0.75rem;
+}
+
+.section-newsletter {
+  margin: 0 auto;
+  width: 100%;
+  background-color: #f2f4f5;
+  text-align: center;
+  padding-top: 1.875rem;
+  padding-bottom: 1.875rem;
+}
+.section-newsletter__tittle {
+  font-size: 1.5rem;
+}
+.section-newsletter__parrafo {
+  font-size: 0.75rem;
+  margin-top: 0.3125rem;
+  margin-bottom: 0.3125rem;
+}
+.section-newsletter__button input, .section-newsletter button {
+  display: inline-block;
+  border-width: 0;
+  font-size: 0.8125rem;
+  padding: 0.3125rem 0.625rem;
+  margin-top: 0.625rem;
+}
+.section-newsletter__button button {
+  background-color: coral;
+  color: white;
+}
+
+.footer {
+  width: 100%;
+  padding: 0.9375rem;
+  margin: 0 auto;
+  font-size: 15px;
+  text-align: center;
+}
+
+.aside {
+  width: 100%;
+}
+@media only screen and (max-width: 550px) {
+  .aside {
+    display: none;
+  }
+}
+
+/*# sourceMappingURL=style.css.map */
